--- a/myreplay/pom.xml
+++ b/myreplay/pom.xml
@@ -55,5 +55,10 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.26</version>
+		</dependency>
 	</dependencies>
 </project>
