--- a/myreplay/src/main/resources/log4j.properties
+++ b/myreplay/src/main/resources/log4j.properties
@@ -1,10 +1,15 @@
-log4j.logger.myTest1= DEBUG, test1
-log4j.appender.test1=org.apache.log4j.FileAppender
-log4j.appender.test1.File=${myweb.root}/WEB-INF/log/test1.log
-log4j.appender.test1.layout=org.apache.log4j.PatternLayout
-log4j.appender.test1.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.logger.myTest2= DEBUG, test2
-log4j.appender.test2=org.apache.log4j.FileAppender
-log4j.appender.test2.File=${myweb.root}/WEB-INF/log/test2.log
-log4j.appender.test2.layout=org.apache.log4j.PatternLayout
-log4j.appender.test2.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.properties\uFF0C
+#
+#FATAL>ERROR>WARN>INFO>DEBUG
+#log4j.rootLogger=DEBUG, Console
+log4j.rootLogger=INFO, Console
+#Console
+log4j.appender.Console=org.apache.log4j.ConsoleAppender
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
+log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%l] - %m%n
+log4j.logger.java.sql.ResultSet=INFO
+log4j.logger.org.apache=INFO
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
