增加maven update project之后，jdk变成1.5的问题。 pom.xmo增加插件 	<build> 		<plugins> 			<plugin> 				<groupId>org.apache.maven.plugins</groupId> 				<artifactId>maven-compiler-plugin</artifactId> 				<version>3.1</version> 				<configuration> 					<source>1.6</source> 					<target>1.6</target> 					<showWarnings>true</showWarnings> 				</configuration> 			</plugin> 		</plugins> 	</build>

--- a/myreplay/pom.xml
+++ b/myreplay/pom.xml
@@ -4,6 +4,20 @@
 	<groupId>com.yzl</groupId>
 	<artifactId>myreplay</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<showWarnings>true</showWarnings>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
